# aim

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  _config.yml  deployment_spec.md  index.html  index.md  install.md  local.mk  module_spec.md  params.json  protocol_spec.md  roadmap.md  rur-builder  rur_dummy.h  server.js
BeliefModule/: .cproject  .project  CMakeLists.txt  Makefile  config.h.in  test.cpp
BlueSourceModule/: CMakeLists.txt
DetectLineModule/: CMakeLists.txt  README.md
DetectLineModule/test/: CMakeLists.txt  TestHough.cpp  TestRandom.cpp
ExpectationMaximizationModule/: binding.gyp  server.js
FindRobotModule/: CMakeLists.txt  Makefile  README.md
KeypointModule/: CMakeLists.txt
MovingAverageModule/: CMakeLists.txt  binding.gyp  server.js
ReadModule/: CMakeLists.txt
RoombaModule/: CMakeLists.txt
WriteModule/: CMakeLists.txt
ZmqModule/: CMakeLists.txt
_layouts/: default.html
aim_modules/: .gitignore  Makefile  README.md
aim_modules/DetectLineModule/test/: CMakeLists.txt  TestHough.cpp  TestRandom.cpp
aimconnect/: aimconnect  install.sh
aimcopy/: aimcopy  install.sh
aimcreate-pkg/: Makefile  README.md  aimcreate-pkg  deinstall.sh  install.sh  uninstall.sh
aimcross/: aimcross  install.sh
aimget/: aimget
aimlist/: aimlist  install.sh
aimlogin/: aimlogin  install.sh
aimmake/: Makefile
aimports/: aimports  install.sh
aimregister/: aimregister  install.sh
aimrun/: aimrun  install.sh
aimselect/: aimselect  install.sh
aimserver/: server.js
aimstop/: aimstop  install.sh
aimtools/: Makefile  README.md  aim
aimupdate/: Makefile  aimupdate  install.sh
backends/: extract.py  nodejs.py  ros.py  standard.py  yarp.py  zeromq.py
css/: style.css
helper/: Makefile  install.sh  sanity.sh
routes/: modules.js
rur-builder/: INSTALL  Makefile  README.md  rur_ros.h  rur_yarp.h
scripts/: README.md  example_sum.sh  run.sh  test  update.sh  zmqserver
(+328 files in other folders)
